# better_optimize

./: .gitattributes  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  setup.py
.github/workflows/: release.yml  run_tests.yml
better_optimize/: __init__.py  _version.py  basinhopping.py  constants.py  differential_evolution.py  exceptions.py  minimize.py  multi_optimize.py  multistart.py  root.py  sequential_optimize.py  utilities.py  wrapper.py
better_optimize/basinhopping/: __init__.py  core.py  progress.py  runner.py
conda_envs/: better_optimize.yml
tests/: test_basinhopping.py  test_differential_evolution.py  test_jax_integration.py  test_minimize.py  test_multistart.py  test_root.py  test_sequential_optimize.py  test_utilities.py  test_wrapper.py
tests/util/: error_script.py
