[build-system]
requires = [
    "numpy",
    "setuptools",
    "versioneer[toml]",
]
build-backend = "setuptools.build_meta"

[project]
name = 'better_optimize'
dynamic = ['version']
requires-python = ">=3.10,<3.14"
description = "A drop-in replacement for scipy optimize functions with quality of life improvements"
readme = "README.md"
license = {text = "MIT License"}
classifiers =[
  "Development Status :: 4 - Beta",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Scientific/Engineering",
  "Topic :: Scientific/Engineering :: Mathematics"
]

dependencies = [
  'numpy',
  'scipy>=1.15',
  'rich',
]

[project.optional-dependencies]
tests = [
  'pytest',
  'pytest-cov',
  'pre-commit'
]

[project.urls]
Homepage = "https://github.com/jessegrabowski/better_optimize"
Repository = "https://github.com/jessegrabowski/better_optimize.git"
Issues = "https://github.com/jessegrabowski/better_optimize/issues"

[tool.versioneer]
VCS = "git"
style = "pep440"
versionfile_source = "better_optimize/_version.py"
versionfile_build = "better_optimize/_version.py"
tag_prefix = "v"

[tool.pytest.ini_options]
testpaths = ["tests"]
minversion = "6.0"
xfail_strict = true

[tool.setuptools]
py-modules = ['better_optimize']

[tool.coverage.report]
exclude_lines = [
  "pragma: nocover",
  "raise NotImplementedError",
  "if TYPE_CHECKING:",
]

[tool.ruff]
line-length = 100
target-version = "py310"
extend-exclude = ["better_optimize/_version.py", "setup.py"]

[tool.ruff.lint]
select = ["D", "E", "F", "I", "UP", "W", "RUF"]
ignore = [
  "E501",
  "RUF001", # String contains ambiguous character (such as Greek letters)
  "RUF002", # Docstring contains ambiguous character (such as Greek letters)
  "RUF012", # Mutable class attributes should be annotated with `typing.ClassVar`
  "D100",
  "D101",
  "D102",
  "D103",
  "D104",
  "D105",
  "D107",
  "D200",
  "D202",
  "D203",
  "D204",
  "D205",
  "D209",
  "D212",
  "D213",
  "D301",
  "D400",
  "D401",
  "D403",
  "D413",
  "D415",
  "D417",
]

[tool.ruff.lint.isort]
lines-between-types = 1

[tool.ruff.lint.per-file-ignores]
'run/*.py' = [
  'E402', # Module level import not at top of file
]
